# speccursor

./: .commitlintrc.js  .editorconfig  .eslintrc.js  .gitignore  .lintstagedrc.js  CHANGELOG.md  CI_VALIDATION_STATUS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: CODEOWNERS
.github/actions/speccursor/: action.yml
.github/workflows/: qualify.yml  speccursor.yml
.husky/: commit-msg  pre-commit
apps/ai-service/: package.json
apps/ai-service/src/: index.ts
apps/ai-service/src/__tests__/: setup.ts
apps/ai-service/src/__tests__/unit/: index.test.ts
apps/controller/: package.json
apps/controller/src/: index.ts
apps/controller/src/__tests__/: setup.ts
apps/controller/src/__tests__/unit/: index.test.ts
apps/github-app/: jest.config.js  package.json
apps/github-app/src/: index.ts
apps/github-app/src/__tests__/: setup.ts
chaos/experiments/: worker-failure.yaml
config/: alertmanager-rules.yaml  grafana-dashboards.yaml  opentelemetry-collector-config.yaml  prometheus.yml
docs/: ci-validation-guide.md
docs/architecture/: PROMPT10_SUMMARY.md  PROMPT11_SUMMARY.md  PROMPT1_SUMMARY.md  PROMPT2_SUMMARY.md  PROMPT7_SUMMARY.md  PROMPT8_SUMMARY.md  PROMPT9_SUMMARY.md  README.md  SUMMARY.md  api-specification.md  c4-diagrams.puml  threat-model.md
docs/rfcs/: 0001-template.md
infrastructure/docker/loki/: loki-config.yml
infrastructure/docker/postgres/: init.sql
infrastructure/docker/prometheus/: prometheus.yml
load/: budgets.json  upgrade-workflow.js
scripts/: ai-patch.ts  evaluate-qualification.js  parse-load-results.js  post-patch-proof.ts  run-ci-tests.js
security/: codeql-config.yml
terraform/observability/: main.tf  outputs.tf  variables.tf
tests/property/go/: upgrade-properties.test.ts
tests/property/node/: upgrade-properties.test.ts
tests/property/python/: upgrade-properties.test.ts
tests/property/rust/: upgrade-properties.test.ts
tests/unit/node/: upgrade.test.ts
workers/lean-engine/: lakefile.lean
workers/lean-engine/lean/: speccursor.lean  test_runner.lean
workers/rust-worker/: Cargo.toml
workers/rust-worker/src/: lib.rs  main.rs
(+1 files in other folders)
